--- a/source/index.html
+++ b/source/index.html
@@ -92,22 +92,22 @@
         <h2 class="how-works__title">Как это работает</h2>
         <ul class="how-works__list">
           <li class="how-works__list-item how-works__benefit">
-            <img class="how-works_img">
+            <img class="how-works_img" src="http://placehold.it/350x50" alt="Полезно">
             <p class="how-works_article">Функциональное питание содержит только полезные питательные
               вещества.</p>
           </li>
           <li class="how-works__list-item how-works__fast">
-            <img class="how-works_img">
+            <img class="how-works_img" src="http://placehold.it/350x50" alt="Быстро">
             <p class="how-works_article">Выпускается в виде порошка, который нужно лишь залить кипятком и
               готово.</p>
           </li>
           <li class="how-works__list-item how-works__replace">
-            <img class="how-works_img">
+            <img class="how-works_img" src="http://placehold.it/350x50" alt="Замена">
             <p class="how-works_article">Замените один-два приема обычной еды на наше функциональное
               питание.</p>
           </li>
           <li class="how-works__list-item how-works__month">
-            <img class="how-works_img">
+            <img class="how-works_img" src="http://placehold.it/350x50" alt="Через месяц">
             <p class="how-works_article">Уже через месяц наслаждайтесь изменениями к лучшему вашего
               питомца.</p>
           </li>
