--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="format-detection" content="telephone=no">
   <link href="css/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   <title>HTML Academy: Кэт энерджи
@@ -10,35 +12,30 @@
 </head>
 
 <body>
-
+  <div class="page-container">
   <header class="page-header">
-    <a href="" class="page-header__logo">
-      <img class="page-header__logo-img" src="img/logo-mobile.svg" width="550" height="200" alt="cat-picture">
-    </a>
-    <a href="" class="page-header__menu">
-      <img class="page-header__menu-img" src="img/icon-mobile-menu.svg" width="50" height="50" alt="menu-mobile">
-    </a>
+    <div class="header-wrapper">
+      <a href="" class="page-header__logo">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+          <img class="page-header__logo-img" width="191px" height="38px" src="img/logo-mobile.svg" alt="cat-logo">
+        </picture>
+      </a>
+      <a href="" class="page-header__menu">
+        <img class="page-header__menu-img" width="18px" height="18px" src="img/icon-close.svg" alt="menu-mobile">
+      </a>
+    </div>
     <nav class="main-nav">
       <ul class="main-nav__list site-list">
-        <li class="site-list__item site-list__item--active">
-          <a href="index.html" class="site-list__link">Главная</a>
+        <li class="site-list__item">
+          <a href="index.html" class="site-list__link site-list__link--active">Главная</a>
         </li>
         <li class="site-list__item">
           <a href="catalog.html" class="site-list__link">Каталог продукции</a>
         </li>
         <li class="site-list__item">
-          <a href="" class="site-list__link">Подбор программы</a>
-        </li>
-        <li class="site-list__item">
-          <a href="#" class="site-list__link">Контакты</a>
-        </li>
-        <li class="site-list__item">
-          <a href="https://htmlacademy.ru/intensive/adaptive" class="site-list__link">HTML Academy</a>
-        </li>
-      </ul>
-      <ul class="main-nav__list user-list">
-        <li class="user-list__item">
-          <a href="#" class="user-list__login">Войти</a>
+          <a href="form.html" class="site-list__link">Подбор программы</a>
         </li>
       </ul>
     </nav>
@@ -46,32 +43,42 @@
 
   <footer class="page-footer">
     <div class="page-footer__address-wrapper">
-      <p class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
-      <p class="page-footer__address">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</p>
+      <div class="page-footer__text">ПРИГЛАШАЕМ К СОТРУДНИЧЕСТВУ ДИЛЕРОВ!</div>
+      <div class="page-footer__address">
+        <p>ул. Большая Конюшенная, д. 19/8</p>
+        <p>Санкт-Петербург</p>
+      </div>
     </div>
-    <img class="footer__map" src="http://placehold.it/150x100" width="150" height="100" alt="Карта">
-    <a href="index.html" class="page-footer__logo">
-      <img class="page-footer__logo-img" src="http://placehold.it/150x100"
-      width="150" height="100" alt="Cat energy">
-    </a>
-    <div class="page-footer__wrapper social-media">
-      <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Вконтакте</span>
-      </a>
-      <a href="#" class="page-footer__instagram social-media__item">
-        <span class="visually-hidden">Instagram</span>
-      </a>
-      <a href="#" class="page-footer__vk social-media__item">
-        <span class="visually-hidden">Facebook</span>
-      </a>
-    </div>
-    <div class="page-footer__copyright copyright">
-      <p class="page-footer__copyright-name">HTML Academy></p>
-      <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
-        <img class="page-footer__copyright-img" src="http://placehold.it/150x100"
-          width="150" height="100" alt="Copyright"></a>
+    <div class="page-footer__wrapper">
+      <img class="footer__map" src="img/bg-map-mobile@1x.png" alt="Карта">
+      <div class="page-footer__bottom">
+        <a href="" class="page-footer__logo">
+          <img class="page-footer__logo-img" src="img/logo-footer.svg" width="128px" height="24px" alt="Cat energy">
+        </a>
+        <div class="social-media">
+          <a href="#" class="page-footer__vk">
+            <img class="page-footer__vk-img" src="img/icon-vk.svg" alt="Вконтакте">
+          </a>
+          <a href="#" class="page-footer__instagram">
+            <img class="page-footer__insta-img" src="img/icon-insta.svg" alt="Instagram">
+          </a>
+          <a href="#" class="page-footer__fb">
+            <img class="page-footer__fb-img" src="img/icon-fb.svg" alt="Facebook">
+          </a>
+        </div>
+        <div class="page-footer__copyright">
+          <span class="page-footer__copyright-name">HTML Academy</span>
+          <a class="page-footer__copyright-link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg class="page-footer__copyright-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60" width="27px" height="24px">
+              <path fill="#444444"
+                d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z" />
+            </svg>
+
+          </a>
+        </div>
+      </div>
     </div>
   </footer>
-
+  </div>
 </body>
 </html>
